# caffe-windows

./: .gitignore  CMakeLists.txt  FAQ.md  Makefile  README.md  make data.bat  plot_loss.m  run_GO - 副本.bat  run_GO.bat  run_GO_newdata.bat  run_cifar10.bat  run_mnist - CPU.bat  run_mnist - 副本.bat  run_mnist.bat  test_run_GO.bat
buildVS2012/compute_image_mean/: compute_image_mean.vcxproj.filters
buildVS2013/: MainBuilder.sln
buildVS2013/MSVC/: MainBuilder.sln  MainBuilder.vcxproj  MainBuilder.vcxproj.filters
buildVS2013/MSVCmex/: matcaffe.vcxproj  matcaffe.vcxproj.filters
buildVS2013/caffelib/: caffelib.vcxproj  caffelib.vcxproj.filters
buildVS2013/compute_image_mean/: compute_image_mean.vcxproj  compute_image_mean.vcxproj.filters
buildVS2013/convert_GO_data/: CBrowseDir.cpp  convert_GO_data.vcxproj
buildVS2013/convert_imageset/: convert_imageset.vcxproj
buildVS2013/convert_mnist_data/: convert_mnist_data.vcxproj  convert_mnist_data.vcxproj.filters
buildVS2013/create_cifar10/: create_cifar10.vcxproj  create_cifar10.vcxproj.bak  create_cifar10.vcxproj.filters
buildVS2013/python/: pycaffe.vcxproj  pycaffe.vcxproj.filters
build_cpu_only/: MainBuilder.sln
build_cpu_only/python/: pycaffe.vcxproj  (+2 more)
examples/: 00-classification.ipynb
matlab/: CMakeLists.txt
tools/: FaceVerification.cpp  GoogLeNet.cpp  caffe.cpp  compute_image_mean.cpp  convert_imageset.cpp  extract_features.cpp
windows/: Caffe.sln  CommonSettings.props.example  nuget.config  python.pyproj
windows/caffe.binding/: CMakeLists.txt  CaffeBinding.cpp  CaffeBinding.h  caffe.binding.vcxproj
(+418 files in other folders)
